<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">设置</string>
    <string name="action_collect">收藏</string>
    <string name="action_edit">编辑</string>
    <string name="action_share">分享</string>
    <string name="action_search">搜索</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="search_all">全部</string>
    <string name="search_palus">男装</string>
    <string name="search_skirt">女装</string>
    <string name="search_shoes">鞋包</string>
    <string name="search_furniture">美妆</string>
    <string name="search_ornament">配饰</string>
    <string name="search_digital">数码</string>
    <string name="search_food">美食</string>
    <string name="search_more">其他</string>
    <string name="category_text">商品分类</string>
    <string name="individual_center">个人中心</string>
    <string name="jiu_kuai_jiu">九块九包邮</string>
    <string name="chao_zhi_qiang_gou">超值抢购</string>
    <string name="competitive_products">精品推荐</string>
    <string name="title_activity_search">搜索</string>
    <string name="search_goods">搜索喜欢的宝贝...</string>
    <string name="search_button_text">搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="clear_history">清空历史记录</string>
    <string name="search_hint">输入的内容不能为空</string>
    <string name="search_no_history">当前没有历史记录</string>
    <string name="share_content">        "天天购是一款汇集淘宝网最新，最全的限时特价包邮商品。每天更新数千款特价商品,更有服饰、时尚、鞋包、美食、居家等九块九包邮商品,吃喝玩乐一站搞定。"</string>
    <string name="share_url">"https://github.com/shewenbiao/Shopping"</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_user_center">个人中心</string>
    <string name="my_cart">我的购物车</string>
    <string name="my_order">我的订单</string>
    <string name="my_logistic">我的物流</string>
    <string name="my_collect">我的收藏</string>
    <string name="message_push">消息推送</string>
    <string name="check_update">检查更新</string>
    <string name="clear_cache">清除缓存</string>
    <string name="user_feedback">用户反馈</string>
    <string name="about_us">关于我们</string>
    <string name="title_activity_feedback">用户反馈</string>
    <string name="bao_you">包邮</string>
    <string name="discount">折</string>
    <string name="jkj_bao_you">九块九包邮</string>
    <string name="_20_feng_ding">二十封顶</string>
    <string name="everyday_recommend">每日推荐</string>
    <string name="tomorrow_forenotice">明日预告</string>
    <string name="network_unavailable">网络不可用!</string>

    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">        @string/pull_to_refresh_refreshing_label</string>
    <string name="title_activity_goods_detail">商品详情</string>
    <string name="title_activity_search_detail">搜索详情</string>
    <string name="ren_qi">人气</string>
    <string name="xiao_liang">销量</string>
    <string name="price">价格</string>
    <string name="sold">月销量</string>
    <string name="jian">件</string>
    <string name="title_activity_order">我的订单</string>
    <string name="title_activity_logistics">我的物流</string>
    <string name="title_activity_cart">我的购物车</string>
    <string name="title_activity_collect">收藏</string>
    <string name="title_activity_about">关于我们</string>
    <string name="summary">"        天天购主要经营男装，女装，数码，家居，母婴，鞋包，美妆，美食，美容护肤各大品牌类商品，更有全场九块九超值商品。每天上新，定有你所爱。天天购精心挑选商品，比一比价格，我们都是最优惠的。"</string>
    <string name="version_summary">天天购V</string>
    <string name="check_update_hint">当前已是最新版本</string>
    <string name="clear_cache_dialog_title">清除缓存</string>
    <string name="clear_cache_dialog_message">" 清除缓存将永久删除所有搜索记录，确定清除缓存吗？"</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="clear_cache_success_hint">清除缓存成功!</string>
    <string name="title_activity_welcom">WelcomActivity</string>
    <string name="shewenbiao_gmail">shewenbiao@gmail.com</string>
    <string name="collect_success">收藏成功！</string>
    <string name="collect_fail">收藏失败！</string>
    <string name="collected">已收藏，请不要重复收藏！</string>
    <string name="select_all">全选</string>
    <string name="cancel_select_all">反选</string>
    <string name="delete_selected">删除</string>
    <string name="no_collect">亲，您还没有收藏过商品，赶紧去收藏！</string>
    <string name="cancel_edit">取消</string>
    <string name="download_start">开始下载</string>
    <string name="download_progress">"下载进度："</string>
    <string name="download_file_path">"下载路径："</string>
    <string name="connect_time_out">连接超时</string>
    <string name="feedback_content_hint">您的宝贵意见是我们的动力！</string>
    <string name="contact">联系方式:</string>
    <string name="commit">提交</string>
    <string name="contact_hint">联系方式有利于我们与您联系！</string>
    <string name="feedback_content_not_null">请填写您的宝贵意见！</string>
    <string name="commit_success">提交成功！</string>
    <string name="user_login">用户登录</string>
    <string name="title_activity_login">我的账户</string>
    <string name="title_activity_advertisement">AdvertisementActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_recommend">RecommendActivity</string>
    <string name="loading_text">正在加载中...</string>
    <string name="no_data">没有更多数据了</string>
    <string name="click_to_reroading">点击重新加载.</string>
    <string name="title_activity_jkj">JKJActivity</string>

</resources>
