<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:fancy="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.shopping.swb.shopping.activity.SearchActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar_layout"/>
    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/divider"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <com.shopping.swb.shopping.view.ClearEditText
            android:id="@+id/edt_search"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_search"
            android:background="@drawable/btn_search_bg"
            android:hint="@string/search_goods"
            android:textColor="@color/category_text_color"
            android:singleLine="true"
            android:drawableRight="@drawable/nav_search_del"
            android:paddingRight="3dp"/>
        <!--<TextView-->
        <!--android:id="@+id/tv_search"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/search_button_text"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:textSize="18sp"-->
        <!--android:textColor="@color/primary_color"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--/>-->
        <Button
            android:id="@+id/tv_search"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:text="@string/search_button_text"
            android:layout_alignParentRight="true"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:background="@drawable/btn_bg_selector"/>
    </LinearLayout>
    <TextView
        android:id="@+id/search_history"
        android:layout_below="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_history"
        android:textSize="20sp"
        android:padding="5dp"
        />
    <TextView
        android:id="@+id/divider"
        android:layout_below="@+id/search_history"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>
    <ListView
        android:id="@+id/search_list"
        android:layout_below="@+id/divider"
        android:layout_above="@+id/btn_clear_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/divider"
        android:dividerHeight="1dp"
        />
    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btn_clear_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        fancy:borderColor="#FFFFFF"
        fancy:borderWidth="1dp"
        fancy:defaultColor="@color/primary_color"
        fancy:focusColor="@color/dark_primary_color"
        fancy:iconPosition="left"
        fancy:radius="30dp"
        fancy:text="@string/clear_history"
        fancy:textColor="#FFFFFF"
        android:layout_marginTop="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/no_history"
        android:layout_below="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/search_no_history"
        android:textSize="18sp"
        android:layout_marginTop="5dp"/>
</RelativeLayout>
