<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.shopping.swb.shopping.activity.FeedbackActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar_layout"/>
    <!--<RelativeLayout-->
    <!--android:id="@+id/container"-->
    <!--android:layout_below="@id/toolbar"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:padding="15dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:hint="@string/feedback_content_hint"
            android:gravity="top"
            android:background="@drawable/edit_text_bg"
            android:padding="8dp"
            android:textColor="@color/text_color_light"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/edit_text_bg"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical">
            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/contact"-->
            <!--android:textColor="@android:color/black"-->
            <!--android:textSize="18sp"-->
            <!--android:layout_marginLeft="8dp"/>-->
            <Spinner
                android:id="@+id/contact_type"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                />

            <EditText
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:background="@android:color/white"
                android:padding="8dp"
                android:singleLine="true"
                android:hint="@string/contact_hint"
                android:textColor="@color/text_color_light"
                android:layout_marginRight="2dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/commit"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_bg_selector"
            android:layout_marginTop="20dp"/>
    </LinearLayout>

</RelativeLayout>
