<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <com.shopping.swb.shopping.view.AutoScrollViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
            <LinearLayout
                android:id="@+id/indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:padding="5dp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout
                android:id="@+id/jkj_bao_you"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/layout_bg_selector">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_home_jkj"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jkj_bao_you"
                    android:textSize="14sp"
                    android:layout_marginTop="-15dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/_20fengding"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/layout_bg_selector">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_home_twenty"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_20_feng_ding"
                    android:textSize="14sp"
                    android:layout_marginTop="-15dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/recommend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/layout_bg_selector">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_home_splendid"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/everyday_recommend"
                    android:textSize="14sp"
                    android:layout_marginTop="-15dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/forenotice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/layout_bg_selector">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/btn_home_warn"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tomorrow_forenotice"
                    android:textSize="14sp"
                    android:layout_marginTop="-15dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>