<?xml version="1.0" encoding="utf-8"?>
<com.shopping.swb.shopping.view.NavDrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        >
        <LinearLayout
            android:id="@+id/user_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerInParent="true">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/default_user_icon"
                android:layout_centerInParent="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/individual_center"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </RelativeLayout>
    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!-->-->
        <!--<ImageView-->
            <!--android:id="@+id/image1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/ic_launcher"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="5dp"/>-->
        <!--<TextView-->
            <!--android:layout_toRightOf="@+id/image1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/jiu_kuai_jiu"-->
            <!--android:textSize="18sp"-->
            <!--android:textColor="@color/category_text_color"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:layout_centerVertical="true"/>-->
        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/wv_forward"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--/>-->
    <!--</RelativeLayout>-->
    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@color/divider"/>-->
    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
       <!-->-->
        <!--<ImageView-->
            <!--android:id="@+id/image2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/ic_launcher"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="5dp"/>-->
        <!--<TextView-->
            <!--android:layout_toRightOf="@+id/image2"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/chao_zhi_qiang_gou"-->
            <!--android:textSize="18sp"-->
            <!--android:textColor="@color/category_text_color"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:layout_centerVertical="true"/>-->
        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/wv_forward"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_alignParentRight="true"-->
            <!--/>-->
    <!--</RelativeLayout>-->
    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@color/divider"/>-->
    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!-->-->
        <!--<ImageView-->
            <!--android:id="@+id/image3"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/ic_launcher"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="5dp"/>-->
        <!--<TextView-->
            <!--android:layout_toRightOf="@+id/image3"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/competitive_products"-->
            <!--android:textSize="18sp"-->
            <!--android:textColor="@color/category_text_color"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:layout_centerVertical="true"/>-->
        <!--<ImageView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:src="@drawable/wv_forward"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_alignParentRight="true"-->
           <!--/>-->
    <!--</RelativeLayout>-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_text"
            android:textSize="18sp"
            android:textColor="@color/category_text_color"
            android:layout_marginLeft="5dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <LinearLayout
            android:id="@+id/all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:clickable="true"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/t0502"/>
            <TextView
                android:id="@+id/text_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/search_all"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider"/>
        <LinearLayout
            android:id="@+id/women_dress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/t0113"/>
            <TextView
                android:id="@+id/text_women_dress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/search_skirt"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <LinearLayout
            android:id="@+id/men_clothing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/t0208"/>
            <TextView
                android:id="@+id/text_men_clothing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/search_palus"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider"/>
        <LinearLayout
            android:id="@+id/furniture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/t0302"/>
            <TextView
                android:id="@+id/text_furniture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/search_furniture"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <LinearLayout
            android:id="@+id/shoes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/t0116"/>
            <TextView
                android:id="@+id/text_shoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/search_shoes"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider"/>
        <LinearLayout
            android:id="@+id/ornament"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/t0114"/>
            <TextView
                android:id="@+id/text_ornament"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/search_ornament"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <LinearLayout
            android:id="@+id/digital"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/t0606"/>
            <TextView
                android:id="@+id/text_digital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/search_digital"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider"/>
        <LinearLayout
            android:id="@+id/food"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/t0501"/>
            <TextView
                android:id="@+id/text_food"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/search_food"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
        <LinearLayout
            android:id="@+id/more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/t0702"/>
            <TextView
                android:id="@+id/text_others"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/search_more"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/divider"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">
        </LinearLayout>
    </LinearLayout>
</com.shopping.swb.shopping.view.NavDrawerLayout>